--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -87,6 +87,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WANNGR3vYmrs",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Importing and reading dataset"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
@@ -954,8 +964,7 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.linear_model import LinearRegression\n",
-        "from sklearn.metrics import mean_absolute_error"
+        "from sklearn.linear_model import LinearRegression"
       ],
       "execution_count": 0,
       "outputs": []
@@ -968,7 +977,7 @@
         "colab": {}
       },
       "source": [
-        "model = LinearRegression(fit_intercept=False)"
+        "model = LinearRegression(fit_intercept=True)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1012,80 +1021,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "2673e2a2-074b-4975-8f8c-88899cfda3ea"
+        "outputId": "de488c03-88ac-46ac-9239-b33f10f3afd9"
       },
       "source": [
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": 86,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "LinearRegression(copy_X=True, fit_intercept=False, n_jobs=None, normalize=False)"
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 86
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SbgqXmBuWX_s",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "18ab7d82-5848-4b51-f50e-6d988743ecc8"
-      },
-      "source": [
-        "y_pred = model.predict(X_train)\n",
-        "mae = mean_absolute_error(y_train, y_pred)\n",
-        "\n",
-        "print(f'Test Error (Apartment Price June): ${mae:.2f}')"
-      ],
-      "execution_count": 93,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Test Error (Apartment Price June): $963.36\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hm1L8Aw_VWmg",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "0db488b4-d6d3-4b4f-90e2-3bd9f9b54904"
-      },
-      "source": [
-        "y_pred = model.predict(X_test)\n",
-        "mae = mean_absolute_error(y_test, y_pred)\n",
-        "\n",
-        "print(f'Test Error (Apartment Price June): ${mae:.2f}')"
-      ],
-      "execution_count": 94,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Test Error (Apartment Price June): $971.46\n"
-          ],
-          "name": "stdout"
+          "execution_count": 105
         }
       ]
     },
@@ -1098,12 +1051,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 185
         },
-        "outputId": "a0374314-0bcc-4f2d-de04-8bc53ccbfcb0"
+        "outputId": "fcc10391-a40f-4998-c48f-9c0bd4c6b554"
       },
       "source": [
         "df.sample(1)"
       ],
-      "execution_count": 99,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1167,42 +1120,42 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>6751</th>\n",
+              "      <th>37387</th>\n",
               "      <td>2.0</td>\n",
-              "      <td>4</td>\n",
-              "      <td>2016-04-29 06:29:29</td>\n",
-              "      <td>LOW FEE!!!!! luxury HUGE! 4 bedroom conv. w/ l...</td>\n",
-              "      <td>East 57th Street</td>\n",
-              "      <td>40.7605</td>\n",
-              "      <td>-73.9678</td>\n",
-              "      <td>5000</td>\n",
-              "      <td>157 East 57th Street</td>\n",
-              "      <td>medium</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2016-05-14 03:14:58</td>\n",
+              "      <td>NO FEE + 1 month freeThis is an amazing deal o...</td>\n",
+              "      <td>East 86th Street</td>\n",
+              "      <td>40.7784</td>\n",
+              "      <td>-73.9533</td>\n",
+              "      <td>4400</td>\n",
+              "      <td>210 East 86th Street</td>\n",
+              "      <td>low</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
+              "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
-              "      <td>6.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4.0</td>\n",
               "      <td>6</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -1210,8 +1163,8 @@
               "</div>"
             ],
             "text/plain": [
-              "      bathrooms  bedrooms  ... total_rooms total_perks\n",
-              "6751        2.0         4  ...         6.0           6\n",
+              "       bathrooms  bedrooms  ... total_rooms total_perks\n",
+              "37387        2.0         2  ...         4.0           6\n",
               "\n",
               "[1 rows x 36 columns]"
             ]
@@ -1219,7 +1172,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 99
+          "execution_count": 108
         }
       ]
     },
@@ -1232,24 +1185,351 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "412e162d-c966-4c19-b497-38b7708c4751"
+        "outputId": "fb7988ff-5ac4-40c1-f424-036dbfa8d3b6"
       },
       "source": [
-        "model.predict([[6, 6]])"
+        "model.predict([[4, 6]])"
       ],
-      "execution_count": 100,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([6805.98730339])"
+              "array([4680.60723428])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 100
+          "execution_count": 110
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gsT5Zw-cY92O",
+        "colab_type": "text"
+      },
+      "source": [
+        "# model's coefficients and intercept"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ky-uQReJZSJE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "dee82fd8-8069-4825-a8f2-70d50a4d6d14"
+      },
+      "source": [
+        "model.coef_"
+      ],
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([767.95662272, 101.76435155])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 111
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5b6AiiNSZC7Z",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "18bb4687-bf0d-4e11-daf6-ec0e8c5fe269"
+      },
+      "source": [
+        "model.intercept_"
+      ],
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "seQdaHx0ZcQG",
+        "colab_type": "text"
+      },
+      "source": [
+        "In this model each room adds $767.96 and each perk adds $101.76. The intercept is zero because I have the model to fit_intercept=True."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "B4SwOyk2Z0M0",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Regression metrics RMSE, MAE, and  R2"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nEao6S5AcQCZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Root Mean Squared Error"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XcLuFz7ybO-S",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.metrics import mean_squared_error"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7jAzoJkxbTgk",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b2d56df6-d55b-4684-cab6-67bda7078382"
+      },
+      "source": [
+        "y_pred = model.predict(X_train)\n",
+        "rmse = np.sqrt(mean_squared_error(y_train, y_pred))\n",
+        "\n",
+        "print(f'Train Root Mean Squared Error (Apartment Price April-May): {rmse:.2f}')"
+      ],
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train Root Mean Squared Error (Apartment Price April-May): 1295.71\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2s9TUACYbe6s",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "88107396-3ab1-499c-811a-a631c9e6596f"
+      },
+      "source": [
+        "y_pred = model.predict(X_test)\n",
+        "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+        "\n",
+        "print(f'Test Root Mean Squared Error (Apartment Price June): {rmse:.2f}')"
+      ],
+      "execution_count": 147,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test Root Mean Squared Error (Apartment Price June): 1293.23\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BXxrTsIVcK_K",
+        "colab_type": "text"
+      },
+      "source": [
+        "## mean_absolute_error"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mukFMs3qbMvX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.metrics import mean_absolute_error"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nGB5fdPsaxCn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4bf2eed6-6cb9-4f95-86a3-e5f0b8ee29b9"
+      },
+      "source": [
+        "y_pred = model.predict(X_train)\n",
+        "mae = mean_absolute_error(y_train, y_pred)\n",
+        "\n",
+        "print(f'Train Mean_Absolute_Error (Apartment Price April-May): ${mae:.2f}')"
+      ],
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train Mean_Absolute_Error (Apartment Price April-May): $856.62\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s5sVgtGZa2PY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8c1e48d7-7503-4e6f-ff6d-d2a4149f0596"
+      },
+      "source": [
+        "y_pred = model.predict(X_test)\n",
+        "mae = mean_absolute_error(y_test, y_pred)\n",
+        "\n",
+        "print(f'Test Mean_Absolute_Error (Apartment Price June): ${mae:.2f}')"
+      ],
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test Mean_Absolute_Error (Apartment Price June): $868.00\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JA4auIxncbZw",
+        "colab_type": "text"
+      },
+      "source": [
+        "## R2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rSV4YiuzZ2jA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.metrics import r2_score"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WNJZ-ENdaiHf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "587e79ec-5e9b-4df6-87a3-2e5b841359a4"
+      },
+      "source": [
+        "y_pred = model.predict(X_train)\n",
+        "r2 = r2_score(y_train, y_pred)\n",
+        "\n",
+        "print(f'Train R^2 (Apartment Price April-May): {r2:.4f}')"
+      ],
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train R^2 (Apartment Price April-May): 0.4593\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0QVZ0jD-aXj7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4b83c676-7f02-4061-c82a-64e3d3b5b535"
+      },
+      "source": [
+        "y_pred = model.predict(X_test)\n",
+        "r2 = r2_score(y_test, y_pred)\n",
+        "\n",
+        "print(f'Train R^2 (Apartment Price June): {r2:.4f}')"
+      ],
+      "execution_count": 141,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train R^2 (Apartment Price June): 0.4619\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
