--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -141,6 +141,388 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-57aJgY6gBCW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 513
+        },
+        "outputId": "3d871e54-994c-4a1f-d25b-8ab5c3e2643b"
+      },
+      "source": [
+        "df.head()"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>bathrooms</th>\n",
+              "      <th>bedrooms</th>\n",
+              "      <th>created</th>\n",
+              "      <th>description</th>\n",
+              "      <th>display_address</th>\n",
+              "      <th>latitude</th>\n",
+              "      <th>longitude</th>\n",
+              "      <th>price</th>\n",
+              "      <th>street_address</th>\n",
+              "      <th>interest_level</th>\n",
+              "      <th>elevator</th>\n",
+              "      <th>cats_allowed</th>\n",
+              "      <th>hardwood_floors</th>\n",
+              "      <th>dogs_allowed</th>\n",
+              "      <th>doorman</th>\n",
+              "      <th>dishwasher</th>\n",
+              "      <th>no_fee</th>\n",
+              "      <th>laundry_in_building</th>\n",
+              "      <th>fitness_center</th>\n",
+              "      <th>pre-war</th>\n",
+              "      <th>laundry_in_unit</th>\n",
+              "      <th>roof_deck</th>\n",
+              "      <th>outdoor_space</th>\n",
+              "      <th>dining_room</th>\n",
+              "      <th>high_speed_internet</th>\n",
+              "      <th>balcony</th>\n",
+              "      <th>swimming_pool</th>\n",
+              "      <th>new_construction</th>\n",
+              "      <th>terrace</th>\n",
+              "      <th>exclusive</th>\n",
+              "      <th>loft</th>\n",
+              "      <th>garden_patio</th>\n",
+              "      <th>wheelchair_access</th>\n",
+              "      <th>common_outdoor_space</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1.5</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2016-06-24 07:54:24</td>\n",
+              "      <td>A Brand New 3 Bedroom 1.5 bath ApartmentEnjoy ...</td>\n",
+              "      <td>Metropolitan Avenue</td>\n",
+              "      <td>40.7145</td>\n",
+              "      <td>-73.9425</td>\n",
+              "      <td>3000</td>\n",
+              "      <td>792 Metropolitan Avenue</td>\n",
+              "      <td>medium</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2016-06-12 12:19:27</td>\n",
+              "      <td></td>\n",
+              "      <td>Columbus Avenue</td>\n",
+              "      <td>40.7947</td>\n",
+              "      <td>-73.9667</td>\n",
+              "      <td>5465</td>\n",
+              "      <td>808 Columbus Avenue</td>\n",
+              "      <td>low</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2016-04-17 03:26:41</td>\n",
+              "      <td>Top Top West Village location, beautiful Pre-w...</td>\n",
+              "      <td>W 13 Street</td>\n",
+              "      <td>40.7388</td>\n",
+              "      <td>-74.0018</td>\n",
+              "      <td>2850</td>\n",
+              "      <td>241 W 13 Street</td>\n",
+              "      <td>high</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2016-04-18 02:22:02</td>\n",
+              "      <td>Building Amenities - Garage - Garden - fitness...</td>\n",
+              "      <td>East 49th Street</td>\n",
+              "      <td>40.7539</td>\n",
+              "      <td>-73.9677</td>\n",
+              "      <td>3275</td>\n",
+              "      <td>333 East 49th Street</td>\n",
+              "      <td>low</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>2016-04-28 01:32:41</td>\n",
+              "      <td>Beautifully renovated 3 bedroom flex 4 bedroom...</td>\n",
+              "      <td>West 143rd Street</td>\n",
+              "      <td>40.8241</td>\n",
+              "      <td>-73.9493</td>\n",
+              "      <td>3350</td>\n",
+              "      <td>500 West 143rd Street</td>\n",
+              "      <td>low</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   bathrooms  bedrooms  ... wheelchair_access common_outdoor_space\n",
+              "0        1.5         3  ...                 0                    0\n",
+              "1        1.0         2  ...                 0                    0\n",
+              "2        1.0         1  ...                 0                    0\n",
+              "3        1.0         1  ...                 0                    0\n",
+              "4        1.0         4  ...                 0                    0\n",
+              "\n",
+              "[5 rows x 34 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F3i6UNRDgEMl",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 612
+        },
+        "outputId": "8330ec6a-bdc9-4329-b629-1c5200c7e73b"
+      },
+      "source": [
+        "df.dtypes"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "bathrooms               float64\n",
+              "bedrooms                  int64\n",
+              "created                  object\n",
+              "description              object\n",
+              "display_address          object\n",
+              "latitude                float64\n",
+              "longitude               float64\n",
+              "price                     int64\n",
+              "street_address           object\n",
+              "interest_level           object\n",
+              "elevator                  int64\n",
+              "cats_allowed              int64\n",
+              "hardwood_floors           int64\n",
+              "dogs_allowed              int64\n",
+              "doorman                   int64\n",
+              "dishwasher                int64\n",
+              "no_fee                    int64\n",
+              "laundry_in_building       int64\n",
+              "fitness_center            int64\n",
+              "pre-war                   int64\n",
+              "laundry_in_unit           int64\n",
+              "roof_deck                 int64\n",
+              "outdoor_space             int64\n",
+              "dining_room               int64\n",
+              "high_speed_internet       int64\n",
+              "balcony                   int64\n",
+              "swimming_pool             int64\n",
+              "new_construction          int64\n",
+              "terrace                   int64\n",
+              "exclusive                 int64\n",
+              "loft                      int64\n",
+              "garden_patio              int64\n",
+              "wheelchair_access         int64\n",
+              "common_outdoor_space      int64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vzliFvw2gT1c",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "4b49f1c1-a466-4a53-8d07-883e2c56530c"
+      },
+      "source": [
+        "df['created'] = pd.to_datetime(df['created'], infer_datetime_format=True).dt.date\n",
+        "df['created'].head()"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    2016-06-24\n",
+              "1    2016-06-12\n",
+              "2    2016-04-17\n",
+              "3    2016-04-18\n",
+              "4    2016-04-28\n",
+              "Name: created, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
     }
   ]
 }
